clearkan aktifivas log
